Fix alignment issues with lost password form closes #29325

--- a/assets/css/twenty-twenty-one.scss
+++ b/assets/css/twenty-twenty-one.scss
@@ -1312,6 +1312,30 @@ a.reset_variations {
 		}
 	}
 
+	&.woocommerce-lost-password {
+		.woocommerce {
+
+			max-width: var(--responsive--alignwide-width) !important;
+			padding: 0 !important;
+			flex-wrap: wrap;
+
+			.woocommerce-notices-wrapper {
+				flex: 1 0 100%;
+			}
+
+			.woocommerce-ResetPassword {
+
+				.woocommerce-form-row--first {
+					float: none;
+				}
+
+				#user_login {
+					margin-bottom: 10px;
+				}
+			}
+		}
+	}
+
 	table.account-orders-table {
 		margin-top: 0;
 		border: 0;
